# AlphaImaging

./: README.md  pyproject.toml
.github/workflows/: python-app.yml  release_windows.yml
src/alpha_app/: main.py  widgets.py  window.py
src/alpha_app/pyinstaller/: alpha_app.spec
src/alpha_core/: __init__.py  io.py  naming.py  ops_combine.py  ops_generate.py  ops_split.py  ops_validate.py
