[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-imaging"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["PySide6", "Pillow", "numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]